<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerStatsActivity"
    android:background="@color/colorOrange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSplashBG"
        android:layout_margin="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/StatsTitle"
                android:id="@+id/NameLabel"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/pubg_name" />

            <TextView
                style="@style/StatsData"
                android:id="@+id/pubgName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/testname"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/StatsTitle"
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/account_id" />

            <TextView
                style="@style/StatsData"
                android:id="@+id/playerID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/testid" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/StatsTitle"
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/matches" />

            <TextView
                style="@style/StatsData"
                android:id="@+id/numMatches"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/testcount" />
        </LinearLayout>

        <Button
            android:id="@+id/getStatsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_statistics"
            android:onClick="onClick"
            android:visibility="gone"/>

        <Button
            android:id="@+id/SavePlayerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_player_stats"
            android:onClick="onSavePlayerButtonClick"
            android:visibility="gone"/>

        <FrameLayout
            android:id="@+id/statisticsFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:visibility="gone"
            >

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>