<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StatisticsFrag" >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:nestedScrollingEnabled="true"
            >

            <TextView
                android:id="@+id/duoLabel"
                style="@style/GameModeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duo_stats" />

            <ListView
                android:id="@+id/list1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

            <TextView
                style="@style/GameModeLabel"
                android:id="@+id/duoFppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duo_fpp_stats" />

            <ListView
                android:id="@+id/list2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/GameModeLabel"
                android:id="@+id/soloLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solo_stats" />

            <ListView
                android:id="@+id/list3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/GameModeLabel"
                android:id="@+id/soloFppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solo_fpp_stats" />

            <ListView
                android:id="@+id/list4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/GameModeLabel"
                android:id="@+id/squadLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/squad_stats" />

            <ListView
                android:id="@+id/list5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/GameModeLabel"
                android:id="@+id/squadFppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/squad_fpp_stats" />

            <ListView
                android:id="@+id/list6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
