<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorOrange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSplashBG"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold|italic"
            android:text="@string/get_your_statistics"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/select_from_the_list"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinnerPubgPreset"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:textAlignment="center"

            />

        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/or"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/welcomeText2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/add_a_custom_name"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pubgNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:gravity="end"
                android:paddingEnd="20dp"
                android:text="@string/pubg_name" />

            <EditText
                android:id="@+id/customPlayerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:background="#FFFFFF"
                android:inputType="textPersonName"
                android:hint="@string/your_pubg_name"
                android:layout_marginEnd="20dp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:onClick="onSend"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>