<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorOrange"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center_horizontal|end"
            android:paddingEnd="5dp"
            android:background="#30313C"
            android:layout_marginEnd="2dp"
            android:text="@string/name"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/playerNameData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#30313C"
            android:text="@string/value"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorOrange"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center_horizontal|end"
            android:paddingEnd="5dp"
            android:background="#30313C"
            android:layout_marginEnd="2dp"
            android:text="@string/id"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/playerIDData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#30313C"
            android:text="@string/value"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>
